--- a/public/style.css
+++ b/public/style.css
@@ -1,78 +1,152 @@
-/* div {
-    border: 2px solid green;
-  } */
+:root {
+    --red: #cb2c37;
+    --orange: #ea9a37;
+    --pink: #d2458a;
+    --purple: #89287d;
+    --lime: #cdcd43;
+    --green: #71cd43;
+    --teal: #48a3a8;
+    --light-blue: #6fbdd0;
+    --charcoal: #434343;
 
-body {
-    background-color: #add8e6;
-}
+  }
 
-.wrapper { 
+  /* :-webkit-any(article, aside, nav, section) h1 {
+    font-size: 1.5em;
+    margin-block-start: 0.3em;
+    margin-block-end: 0.3em;
+} */
+
+div {
+    /* border: 2px solid green;*/
+    box-sizing: border-box;
+  }
+
+.main-wrapper { 
     border: none;
     display: grid; 
-    grid-template-columns: 1fr 2fr 1fr; 
-    grid-template-rows:repeat(5, minmax(50px, 1fr)); 
-    column-gap: 5px;
-    row-gap: 5px;
+    grid-template-columns: 2fr 7fr 3fr; 
+    grid-template-rows:repeat(12, minmax(50px, 1fr)); 
+    column-gap: 0px;
+    row-gap: 0px;
+    max-width: 1600px;
 } 
 
+#sketch-holder {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#main-title {
+    margin-block-start: 0.3em;
+    margin-block-end: 0.3em;
+    padding: 0px;
+    margin: 0px;
+}
+
+.header-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0px;
+    margin: 0px;
+}
+    
 .container {
+    display: flex;
+    justify-content: center;
+    /* align-items: center; */
+    /* border: 2px solid black; */
+    font-size: 1em;
+}
+
+.item {
+    flex-grow: 1; /* default 0 */
+}
+
+.column-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     border: 2px solid black;
-    border-radius: 20px;
-    font-size: 1em;
+    font-size: 2em;
+}
+
+.box {
+    padding: 0px;
+    border-width: 0px; 
+    border-style: solid;
+    /* border-color: var(--red); */
+    border-radius: 25%/10%;
+    padding: 10px;
 }
   
-.title-bar { 
-    grid-column-start: 1; 
-    grid-column-end: 4; 
+.upper-display { 
+    grid-column-start:2; 
+    grid-column-end: 2; 
     grid-row-start: 1; 
     grid-row-end: 1; 
+    background-color:var(--orange);
+
 }
 
 .score-board { 
     grid-column-start: 1; 
     grid-column-end: 2; 
-    grid-row-start: 2; 
-    grid-row-end: 5; 
+    grid-row-start: 1; 
+    grid-row-end: 12;
+    background-color:var(--green);
 }
 
-.drawing-canvas { 
+.scoreboard-item {
+    background-color:var(--red);
+    width: 100%
+}
+
+.drawing-canvas {
     grid-column-start: 2; 
     grid-column-end: 2; 
     grid-row-start: 2; 
-    grid-row-end: 5; 
+    grid-row-end: 10; 
+    background-color:var(--red);
+    height: 500px;
+    /* width: minmax(900px, 1fr); */
+    border-radius: 20%;
 }
 
 .player-controls { 
     grid-column-start: 3; 
     grid-column-end: 3; 
-    grid-row-start: 2; 
-    grid-row-end: 4; 
+    grid-row-start: 1; 
+    grid-row-end: 5; 
 }
 
 .admin-panel { 
     grid-column-start: 1; 
     grid-column-end: 1; 
-    grid-row-start: 5; 
+    grid-row-start: 4; 
     grid-row-end: 6; 
 }
 
-.game-state { 
+.lower-display { 
     grid-column-start: 2; 
     grid-column-end: 2; 
-    grid-row-start: 5; 
-    grid-row-end: 5; 
+    grid-row-start: 10; 
+    grid-row-end: 12; 
+    background-color:var(--purple);
 }
 
 .message-stream { 
     grid-column-start: 3; 
     grid-column-end: 3; 
-    grid-row-start: 4; 
-    grid-row-end: 6; 
+    grid-row-start: 1; 
+    grid-row-end: 12; 
+    background-color:var(--light-blue);
 }
+
 
 #messages-box{
     border: 2px solid black;
